Fix artifacts when using Move Tool in WrapAround mode

The paint device cache should be reset when wrap-around mode is
changed. The artifacts appeared because
KisPaintDeviceWrappedStrategy::move() received non-WA exactBounds()
of the device, which caused it to do the move incorrectly.

BUG:424233